--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <script src='elefantes.js'></script>
   </head>
   <body>
+    <div id="elefantes">
+      <img src="Elefantue.gif"/>
+    </div>
   </body>
 </html>
