--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <script src='elefantes.js'></script>
+    <style>
+       #body{
+         background-image:url('web.jpg');
+       }
+    </style>
   </head>
   <body>
     <div id="elefantes">
