added a tiling background image

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <script src='elefantes.js'></script>
     <style>
-       #body{
-         background-image:url('web.jpg');
+       body{
+         background-image:url('spidei.jpg');
        }
     </style>
   </head>
