--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <script src='elefantes.js'></script>
-    <style>
+    
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
        body{
          background-image:url('spidei.jpg');
        }
